--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -13,7 +13,7 @@ nav {
   margin-top: 10px;
   list-style: none;
   gap: 20px;
-  color: #49557e;
+  color: #4b5563;
   font-size: 18px;
   cursor: pointer;
 }
@@ -29,7 +29,7 @@ nav {
 .nav-right button {
   background: transparent;
   font-size: 15px;
-  color: #49557e;
+  color: #4b5563;
   border: 1px solid #f95017;
   padding: 10px 30px;
   border-radius: 50px;
