--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -6,6 +6,9 @@
   transition: 0.3s;
   animation: fadeIn 1s;
 }
+.food-item:hover {
+  box-shadow: 0px 0px 10px #ff9572;
+}
 .food-item-image {
   width: 100%;
   border-radius: 15px 15px 0px 0px;
@@ -26,13 +29,13 @@
 .food-item-name-rating img {
   width: 70px;
 }
-.food-item-desc{
-    color: #676767;
-    font-size: 15px;
+.food-item-desc {
+  color: #676767;
+  font-size: 15px;
 }
-.food-item-price{
-    color: #f95017;
-    font-size: 22px;
-    font-weight: 500;
-    margin: 10px 0px;
+.food-item-price {
+  color: #f95017;
+  font-size: 22px;
+  font-weight: 500;
+  margin: 10px 0px;
 }
