--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -13,10 +13,11 @@ footer {
   width: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
-  gap: 8-px;
+  gap: 10px;
 }
 #logo {
   width: 150px;
+  mix-blend-mode: lighten;
 }
 .footer-content-left,
 .footer-content-center,
@@ -25,6 +26,9 @@ footer {
   flex-direction: column;
   align-items: start;
   gap: 20px;
+}
+.footer-content-left {
+  margin-right: 50px;
 }
 .footer-content-left li,
 .footer-content-center li,
