--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,9 +6,14 @@
   box-sizing: border-box;
   font-family: Outfit, Arial, Helvetica, sans-serif;
 }
-body {
+/* body {
   min-height: 100vh;
   width: 90%;
+  margin: auto;
+} */
+main {
+  min-height: 100vh;
+  width: 95%;
   margin: auto;
 }
 a {
