--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -7,7 +7,7 @@
   color: #262626;
 }
 .explore-menu-text {
-  max-width: 50%;
+  max-width: 70%;
   color: #808080;
 }
 .explore-menu-list {
@@ -36,12 +36,24 @@
   cursor: pointer;
 }
 .explore-menu-list-item .active {
-    border: 4px solid #f95017;
-    padding: 2px;
+  border: 4px solid #f95017;
+  padding: 2px;
 }
 .explore-menu hr {
   margin: 10px 0px;
   height: 2px;
   background-color: #e2e2e2;
   border: none;
+}
+/* Media Query:
+- sm, mobile: 750px
+- md, tablet: 900px
+- lg, desktop: 1200px
+- xl, ultra-wide: 1440px
+*/
+@media (max-width: 1200px) {
+  .explore-menu-text{
+    max-width: 100%;
+    font-size: 14px;
+  }
 }
