--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -20,6 +20,11 @@ hr {
   height: 1px;
   background-color: #a9a9a9;
 }
-.app-content{
+.app-content {
   display: flex;
+}
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
